Add submoudle_113 as a submodule with local files

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "submoudle_target_002"]
 	path = submoudle_target_002
 	url = https://github.com/BannariPaviOwn/source_repo.git
+[submodule "submoudle_113"]
+	path = submoudle_113
+	url = https://github.com/BannariPaviOwn/source_repo.git
