Add submoudle_target_003 as a submodule with local files

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "submoudle_114"]
 	path = submoudle_114
 	url = https://github.com/BannariPaviOwn/source_repo.git
+[submodule "submoudle_target_003"]
+	path = submoudle_target_003
+	url = https://github.com/BannariPaviOwn/source_repo.git
