Add submoudle_target_004 as a submodule with local files

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "submoudle_target_003"]
 	path = submoudle_target_003
 	url = https://github.com/BannariPaviOwn/source_repo.git
+[submodule "submoudle_target_004"]
+	path = submoudle_target_004
+	url = https://github.com/BannariPaviOwn/source_repo.git
