--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "model-v1"]
 	path = model-v1
 	url = https://github.com/BannariPavi/deepcraft-model-zoo-for-psoc-edge.git
+[submodule "target_006"]
+	path = target_006
+	url = https://github.com/BannariPavi/deepcraft-model-zoo-for-psoc-edge.git
