Add target_080 as a submodule with local files

--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "target_009"]
 	path = target_009
 	url = https://github.com/BannariPavi/4bites.git
+[submodule "target_080"]
+	path = target_080
+	url = https://github.com/Infineon/deepcraft-model-zoo-for-psoc-edge.git
