Add submodule deepcraft019

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,39 +1,3 @@
-[submodule "submoudle_target_001"]
-	path = submoudle_target_001
-	url = https://github.com/BannariPaviOwn/source_repo.git
-[submodule "submoudle_target_002"]
-	path = submoudle_target_002
-	url = https://github.com/BannariPaviOwn/source_repo.git
-[submodule "submoudle_113"]
-	path = submoudle_113
-	url = https://github.com/BannariPaviOwn/source_repo.git
-[submodule "submoudle_114"]
-	path = submoudle_114
-	url = https://github.com/BannariPaviOwn/source_repo.git
-[submodule "submoudle_target_003"]
-	path = submoudle_target_003
-	url = https://github.com/BannariPaviOwn/source_repo.git
-[submodule "submoudle_target_004"]
-	path = submoudle_target_004
-	url = https://github.com/BannariPaviOwn/source_repo.git
-[submodule "submoudle_target_005"]
-	path = submoudle_target_005
-	url = https://github.com/BannariPaviOwn/source_repo.git
-[submodule "model-v1"]
-	path = model-v1
-	url = https://github.com/BannariPavi/deepcraft-model-zoo-for-psoc-edge.git
-[submodule "target_007"]
-	path = target_007
-	url = https://github.com/BannariPavi/deepcraft-model-zoo-for-psoc-edge.git
-[submodule "target_008"]
-	path = target_008
-	url = https://github.com/BannariPavi/deepcraft-model-zoo-for-psoc-edge.git
-[submodule "target_009"]
-	path = target_009
-	url = https://github.com/BannariPavi/4bites.git
-[submodule "target_080"]
-	path = target_080
-	url = https://github.com/Infineon/deepcraft-model-zoo-for-psoc-edge.git
-[submodule "target_081"]
-	path = target_081
-	url = https://github.com/Infineon/deepcraft-model-zoo-for-psoc-edge.git
+[submodule "deepcraft019"]
+	path = deepcraft019
+	url = file://C:/project/sample_pull_git/deepcraft019
