Add submodule deepcraftpsco_edge_53

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "deepcraft019"]
-	path = deepcraft019
-	url = file://C:/project/sample_pull_git/deepcraft019
+[submodule "deepcraftpsco_edge_53"]
+	path = deepcraftpsco_edge_53
+	url = file://C:/project/sample_pull_git/deepcraftpsco_edge_53
